# Tool_xep_lich_hoc

./: .gitignore  CMakeLists.txt  Data.csv  README.md  index.html
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  toolXepLichHoc.slnx  toolXepLichHoc.vcxproj  toolXepLichHoc.vcxproj.filters
build-msvc/Release/: index.html
build-msvc/toolXepLichHoc.dir/Release/: toolXepLichHoc.exe.recipe
build-msvc/toolXepLichHoc.dir/Release/toolXepLichHoc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  toolXepLichHoc.lastbuildstate
build-msvc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-msvc/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-msvc/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-msvc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
include/: commonTypes.h  conflictDetector.h  dataManager.h  dataParser.h  scheduleEngine.h  webview.h
src/: conflictDetector.cpp  dataManager.cpp  dataParser.cpp  main.cpp  scheduleEngine.cpp
